--- a/css.css
+++ b/css.css
@@ -1,12 +1,16 @@
 body {
     background-color: rgb(105, 97, 206);
     font-family: 'Courier New', Courier, monospace;
+    background: url('https://images.unsplash.com/photo-1626494988966-4c3a81b3e056') no-repeat fixed center; 
+    background-size: 100%;
 }
+
 main {
     display: flex;
     justify-content: center;
     align-items: flex-start;
 }
+
 button {
     border-radius: 5px;
     border: none;
@@ -15,6 +19,7 @@ button {
     padding: 0.3rem;
     cursor: pointer;
 }
+
 button:hover {
     background-color: grey;
 }
@@ -28,11 +33,13 @@ button:hover {
     width: 23%;
     padding-bottom: 0.5rem;
 }
+
 #pBtnsDiv {
     display: flex;
     justify-content: center;
     padding: 0.5rem;
 }
+
 header {
     height: 5rem;
     display: flex;
@@ -40,6 +47,7 @@ header {
     align-items: center;
     /* border: green solid 1px; */
 }
+
 #pNameDiv div {
     cursor: pointer;
     display: flex;
@@ -50,15 +58,19 @@ header {
     background-color: whitesmoke;
     border-radius: 5px;
 }
+
 #pNameDiv div:hover {
     background-color: gray;
 }
+
 #pNameDiv p {
     margin: 0;
 }
+
 .activeDiv {
     font-weight: bold;
 }
+
 #newProjectBtn {
     margin-right: 1rem;
 }
@@ -78,6 +90,7 @@ header {
     background-color: rgb(138, 172, 236);
     padding: 0 1rem 1rem;
 }
+
 #newProjectDiv {
     display: flex;
     justify-content: center;
