--- a/css.css
+++ b/css.css
@@ -1,7 +1,10 @@
+:root{
+    --insetBackgroundColor: rgba(221, 225, 235, 0.7);
+}
 body {
-    background-color: rgb(105, 97, 206);
+    /* background-color: rgb(105, 97, 206); */
     font-family: 'Courier New', Courier, monospace;
-    background: url('https://images.unsplash.com/photo-1626494988966-4c3a81b3e056') no-repeat fixed center; 
+    background: url('./background.jpg') no-repeat fixed center; 
     background-size: 100%;
 }
 
@@ -28,7 +31,7 @@ button:hover {
 
 #sideBar {
     border-radius: 30px;
-    background-color: rgb(146, 178, 238);
+    background-color: var(--insetBackgroundColor);
     margin-right: 10%;
     width: 23%;
     padding-bottom: 0.5rem;
@@ -87,7 +90,7 @@ header {
 #pFormDiv {
     display: none;
     border-radius: 30px;
-    background-color: rgb(138, 172, 236);
+    background-color: var(--insetBackgroundColor);
     padding: 0 1rem 1rem;
 }
 
