--- a/css.css
+++ b/css.css
@@ -1,38 +1,47 @@
 :root{
     --insetBackgroundColor: rgba(221, 225, 235, 0.7);
+    --contentDivRadius: 3px;
+    --buttonRadius: 2px;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* outline: solid blue 1px; */
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
-    /* background-color: rgb(105, 97, 206); */
-    font-family: 'Courier New', Courier, monospace;
     background: url('./background.jpg') no-repeat fixed center; 
     background-size: 100%;
 }
 
 main {
     display: flex;
-    justify-content: center;
+    /* outline: solid red 1px; */
+    justify-content: space-evenly;
     align-items: flex-start;
 }
 
 button {
-    border-radius: 5px;
+    border-radius: var(--buttonRadius);
     border: none;
-    font-family: 'Courier New', Courier, monospace;
     font-weight: 545;
     padding: 0.3rem;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: grey;
+    background-color: rgb(136, 158, 212);
 }
 
 /* Sidebar Project Names div */
 
 #sideBar {
-    border-radius: 30px;
+    border-radius: var(--contentDivRadius);
     background-color: var(--insetBackgroundColor);
-    margin-right: 10%;
+    /* margin-right: 10%; */
     width: 23%;
     padding-bottom: 0.5rem;
 }
@@ -81,7 +90,6 @@ header {
 /* Content div  */
 
 #content {
-    border-radius: 30px;
     width: 50%;
 }
 
@@ -89,19 +97,21 @@ header {
 
 #pFormDiv {
     display: none;
-    border-radius: 30px;
+    border-radius: var(--contentDivRadius);
     background-color: var(--insetBackgroundColor);
-    padding: 0 1rem 1rem;
+    padding: 1rem 2rem;
 }
 
 #newProjectDiv {
     display: flex;
     justify-content: center;
 }
+
 .fDiv {
     display: flex;
     align-items: center;
 }
+
 .formInputs {
     margin-left: auto;
     width: 73%;
@@ -112,14 +122,17 @@ header {
     border: none;
     margin-right: 1rem;
 }
+
 #formDiv p {
     margin: 0;
 }
+
 select {
     border-radius: 5px;
     height: 1.5rem;
     border: none;
 }
+
 #selectWrapper {
     margin-left: auto;
     width: 73.7%;
@@ -128,9 +141,11 @@ select {
     border: none;
     margin-right: 1rem;
 }
+
 #inputToDoWrapperForm {
     width: 100%;
 }
+
 #todoContainerForm div {
     display: flex;
     align-items: center;
@@ -143,9 +158,11 @@ select {
     overflow-wrap: normal;
     padding-bottom: 0;
 }
+
 #todoContainerForm p {
     margin: 0;
 }
+
 #inputToDoWrapperForm {
     display: flex;
     margin-top: 0.5rem;
@@ -153,13 +170,13 @@ select {
     border-radius: 5px;
     width: 99.9%;
 }
+
 #inputToDoForm {
     width: 100%;
     min-height: 1.7rem;
     border-radius: 5px;
     border: none;
     padding-left: 0.7rem;
-    font-family: 'Courier New', Courier, monospace;
     font-size: 1em;
 }
 #saveCancelDiv {
